resources/assets/sass/base/_base.scss
/* Base Styles */
body {
	overflow-x: hidden !important;
	background: $white;
}

a:link, a:visited {
	color: $orange;
	text-decoration: underline;

	&.btn, &.wp-block-button__link {
		text-decoration: none;
	}

	&:hover {
		text-decoration: none;
	}
}

.main-container {
	width: $max-width;
	max-width: 100%;
	padding: 0px 20px;
	margin: 20px auto 0px;
	position: relative;
}

h1, h2, h3, h4 {
	text-transform: lowercase;
}

p {
	color: $grey;
}

